  assigned quality scores of 0, rather than retaining their previous scores.
+ Fixed a bug with the align subcommand where deletions within the input
  sequence (gaps in the alignment) were causing an incorrect barcode start
  position.

PairSeq:
+ Performance improvements. The tool should now be considerably faster on very
  large files.
+ Removed output of sequences which do not have a mate pair (pair-fail file).

ParseHeaders:
+ Add 'cat' action to collapse subcommand which concatenates strings into
  a single annotation.

SplitSeq
+ Removed --clean (and --failed) flag from all subcommands.
+ Added progress updates to sample and samplepair subcommands.
+ Performance improvements to samplepair subcommand.

-------------------------------------------------------------------------------
June 10, 2014
Version 0.4.4

SplitSeq:
+ Removed a *nix-specific dependency, allowing SplitSeq to work on Windows.

-------------------------------------------------------------------------------
April 7, 2014
Version 0.4.3

CollapseSeq:
+ Fixed bug that occurs with Python 2.7.5 on OS X.

SplitSeq:
+ Fixed bug in samplepairs subcommand that occurs with Python 2.7.5 on OS X.

-------------------------------------------------------------------------------
March 20, 2014
Version 0.4.2

Increased verbosity of exception reporting.

IgCore:
+ Updates to consensus functions to support changes to BuildConsensus.

AssemblePairs:
+ Set default alpha to 0.01.

BuildConsensus:
+ Added support for '--freq (value)' parameter to quality consensus method
  and set default value to 0.6.
+ Fixed a bug in the frequency consensus method where missing values were
  contributing to the total character count at each position.
+ Added the parameter '--maxmiss (value)' which provides a cut-off for removal 
  of positions with too many N or gap characters .

MaskPrimers:
+ Renamed the '--reverse' parameter to '--revpr'.

SplitSeq:
+ Removed convert subcommand.
